fixed an issue with navbar on mobile.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@
 .navbar .router-link-active,
 .navbar .router-link-exact-active {
   color: #c790c7;
-  border-bottom: 1px solid #c790c7;
+  border-bottom: 3px solid #c790c7;
 }
 .navbar a {
   color: #f2f2f2;
@@ -1317,6 +1317,12 @@ body,
   }
 }
 @media (max-width: 992px) {
+  .page-title {
+    padding-top: 0 !important;
+  }
+  .navbar-wrapper {
+    position: static;
+  }
   .navbar-wrapper .container-fluid {
     justify-content: center;
   }
