--- a/src/assets/scss/partials/_navbar.scss
+++ b/src/assets/scss/partials/_navbar.scss
@@ -5,7 +5,7 @@
   .router-link-active,
   .router-link-exact-active {
     color: $clr-accent-g;
-    border-bottom: 1px solid $clr-accent-g;
+    border-bottom: 3px solid $clr-accent-g;
   }
 
   a {
